# learn-me-some-py

./: .gitignore  CHALLENGE_CONCEPT_MAPPING.md  CLAUDE.md  CONCEPTS_SPEC.md  Cargo.toml  PHASE_1_COMPLETION_SUMMARY.md  README.md  ULTRASPEC-ALT.md  ULTRASPEC.md  demo_renderer.py  dev.sh  pyproject.toml  pytest.ini  remote-control.py  test_e2e_hello_world.py
.palace/: config.json  current_prompt.md  history.jsonl  modified_files.json  reorganize-docs.md  swarm_orchestrator_complete.md
.palace/skills/: command-safety.md
challenges/: INTERMEDIATE_INDEX.md  LEVEL_2_3_SUMMARY.md
challenges/async_downloader/: async_downloader.toml  test_async_downloader.py
challenges/code_analyzer/: code_analyzer.toml  test_code_analyzer.py
challenges/config_parser/: config_parser.toml  test_config_parser.py
challenges/container_basics/: add_exists.toml  test_container_add_exists.py
challenges/context_manager/: context_manager.toml  test_context_manager.py
challenges/decorator_factory/: decorator_factory.toml  test_decorator_factory.py
challenges/integer_container/: integer_container.toml  test_integer_container.py
challenges/interview_prep/: ada_integer_parser.toml  efficient_fibonacci.toml  fibonacci_sequence.toml  lucky_numbers.toml  pyramid_builder.toml  pyramid_time_attack.toml  test_ada_integer_parser.py  test_efficient_fibonacci.py  test_fibonacci_sequence.py  test_lucky_numbers.py  test_pyramid_builder.py
challenges/level_0_basics/: simple_math.toml  test_simple_math.py
challenges/level_2_intermediate/: fizz_buzz.toml  grade_calculator.toml  password_validator.toml  shopping_list.toml  test_fizz_buzz.py  test_grade_calculator.py  test_password_validator.py  test_shopping_list.py  test_todo_manager.py  test_word_counter.py  todo_manager.toml  word_counter.toml
challenges/level_3_intermediate/: contact_book.toml  custom_calculator.toml  data_processor.toml  error_handler.toml  file_analyzer.toml  inventory_system.toml  test_contact_book.py  test_custom_calculator.py  test_data_processor.py  test_error_handler.py  test_file_analyzer.py  test_inventory_system.py
challenges/meta/: README.md  build_challenge_system.toml  build_concept_loader.toml  build_controller_input.toml  build_emotional_feedback.toml  build_fun_detector.toml  build_progress_tracker.toml  build_screenshot_system.toml  build_spaced_repetition.toml  build_tas_recorder.toml  build_weakness_driller.toml  test_build_challenge_system.py  test_build_concept_loader.py  test_build_controller_input.py  test_build_emotional_feedback.py  test_build_fun_detector.py  test_build_progress_tracker.py
challenges/orm_lite/: orm_lite.toml  test_orm_lite.py
challenges/plugin_system/: plugin_system.toml  test_plugin_system.py
challenges/task_scheduler/: task_scheduler.toml  (+1 more)
data/: lmsp.db  speedrun_leaderboard.txt
docs/: 00-API-REFERENCE.md  00-VISION.md  01-GAME-ENGINE.md  01-IMPLEMENTATION-NOTES.md  01-QUICKSTART.md  02-ADAPTIVE-ENGINE.md  02-TROUBLESHOOTING.md  03-INPUT-SYSTEMS.md  03-PERFORMANCE.md  04-CONCEPT-DAG.md  05-CHALLENGE-SYSTEM.md  06-PROGRESSION-SYSTEM.md  07-INTROSPECTION-SYSTEM.md  08-MULTIPLAYER-INTEGRATION.md  09-GAME-STATE.md  10-ARCHITECTURE.md  10-CODE-EXECUTION.md  11-LMSP-OVERVIEW.md  11-SPACED-REPETITION.md  12-FUN-TRACKING.md  12-PLAYER-ZERO-OVERVIEW.md  13-PALACE-INTEGRATION.md  13-STREAM-JSON.md  14-TAS-RECORDING.md  15-SCREENSHOT-WIREFRAME.md  16-VIDEO-MOSAIC.md  17-PALACE-INTEGRATION.md  18-TESTING-STRATEGY.md  19-ASSETS.md  20-ADAPTIVE-ENGINE.md  20-CONFIGURATION.md  21-EMOTIONAL-INPUT.md  21-ERROR-HANDLING.md  22-COMMUNITY.md  22-CONCEPT-DAG.md  23-CHALLENGE-SYSTEM.md  23-PERFORMANCE.md  24-DEPLOYMENT.md  30-RADIAL-TYPING.md  31-EASY-MODE.md  (+17 more)
examples/: claude_player_demo.py
lmsp/: __init__.py  __main__.py  main.py
scripts/: README.md  backup-db.sh  swarm_orchestrator.py
tests/: __init__.py  conftest.py  test_achievements.py  test_adaptive.py  test_audio.py  test_calibration.py  test_challenge_presenter.py  test_challenges.py  test_claude_player.py  test_code_editor.py  test_concepts.py  test_database.py  test_e2e_game_flow.py  test_emotional.py  test_emotional_feedback_ui.py  test_emotional_feedback_viz.py  test_engine.py  test_fun_tracker.py  test_game_screen.py  test_game_state.py  test_gamepad.py  test_introspection.py  test_live_game_loop.py  test_live_loop.py  test_main.py  test_playtest_ai.py  test_playtest_analyzer.py  test_playtest_integration.py  test_playtest_report_generator.py  test_playwright_helpers.py  test_project_curriculum.py  test_radial.py  test_renderer.py  test_screenshot_capture.py  test_session_sync.py  test_spaced_repetition.py  test_stream_json.py  test_tas_recorder.py  test_themes.py  test_touchscreen.py  (+8 more)
(+239 files in other folders)
