[project]
name = "learn-me-some-py"
version = "0.1.0"
description = "The game that teaches you to build it - Learn Python with controller support and adaptive AI"
authors = [{name = "Wings", email = "wings@riff.cc"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pygame>=2.5.0",              # Game engine with controller support
    "rich>=13.0.0",               # Beautiful terminal output
    "textual>=0.80.0",            # TUI framework
    "pydantic>=2.0.0",            # Data validation
    "tomli>=2.0.0",               # TOML parsing
    "apscheduler>=3.10.0",        # Spaced repetition scheduling
    "pillow>=10.0.0",             # Image processing
    "webp>=0.3.0",                # WebP encoding
    "networkx>=3.0",              # Graph algorithms for concept DAG
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
multiplayer = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "anthropic>=0.38.0",  # Claude API for AI players
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0.0",               # Password hashing (never roll your own crypto)
    "webauthn>=2.0.0",             # WebAuthn/passkey authentication with REAL crypto verification
]

[project.scripts]
lmsp = "lmsp.main:main"
lmsp-challenge = "lmsp.challenge_runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lmsp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
markers = [
    "long: marks tests as long running (deselect with '-m \"not long\"')",
    "playtest: AI playtest integration tests",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
